# ai-data-analyst

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: sales.db  schema.sql
data/questions/: basic-queries.json  complex-queries.json  expected-sql.json
data/seed_data/: customers.csv  orders.csv  products.csv  returns.csv  sales_reps.csv
examples/: README.md  anomaly-report.json  benchmark.json  data-quality-report.json  narrative-report.md
examples/query-results/: q1-top-products-by-revenue.md  q2-new-customers-by-month.md  q3-avg-order-value-by-segment.md  q4-highest-quota-attainment.md  q5-most-returned-products.md
src/: anomaly.py  benchmark.py  cleaner.py  db_setup.py  executor.py  main.py  narrator.py  nl2sql.py
tests/: conftest.py  test_anomaly.py  test_benchmark.py  test_cleaner.py  test_db_setup.py  test_executor.py  test_narrator.py  test_nl2sql.py
